@@ -1,3 +1,3 @@
 #Build Number for ANT. Do not edit!
-#Wed Jan 03 11:30:08 CET 2007
-build.number=583
+#Fri Jan 05 10:33:35 CET 2007
+build.number=586
