@@ -9,7 +9,7 @@
 @import "http://www.restlet.org/stylesheets/tigris.css";
 /*  ]]> */
  </style>
-<title>Restlet</title>
+<title>Restlet - Lightweight REST framework for Java</title>
 </head>
 <body>
 
